Update 'jkm8f53xl-java-springboot' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-1d2f603d6f.xkgu.p3.openshiftapps.com/rhtap/rhtap-qe-java-springboot:4e6d32ee376f5029219aba0afcaa06afb7aa302a@sha256:53dbf30d6a5d49c0b6c69dc8f28c28380529cd0f8d523fd524a73b5981dc08b3

--- a/components/jkm8f53xl-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/jkm8f53xl-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: jkm8f53xl-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-1d2f603d6f.xkgu.p3.openshiftapps.com/rhtap/rhtap-qe-java-springboot:4e6d32ee376f5029219aba0afcaa06afb7aa302a@sha256:53dbf30d6a5d49c0b6c69dc8f28c28380529cd0f8d523fd524a73b5981dc08b3
+          name: container-image
